# symphony

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Makefile  Procfile.dev  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.agents/skills/land/: land_watch.py
.github/workflows/: ci.yml
apps/api/config/: urls.py
apps/api/config/settings/: base.py  local.py  test.py
apps/api/lib/common/: logging.py
apps/api/lib/tracker/: __init__.py  factory.py  interfaces.py  linear_client.py  plane.py  plane_client.py  write_contract.py  write_service.py
apps/api/lib/workflow/: README.md  __init__.py  config.py  runtime.py
apps/api/runtime/agent_runner/: README.md  client.py  dynamic_tool.py  events.py  harness.py  prompting.py
apps/api/runtime/observability/: __init__.py  runtime.py  snapshots.py
apps/api/runtime/orchestrator/: core.py  recovery.py
apps/api/runtime/workspace/: __init__.py
apps/api/symphony/: apps.py  cli.py
apps/api/symphony/adminapp/: apps.py
apps/api/symphony/agent_runner/: README.md  __init__.py  client.py  dynamic_tool.py  events.py  harness.py  prompting.py  runner.py
apps/api/symphony/api/: apps.py  server.py  views.py
apps/api/symphony/common/: types.py
apps/api/symphony/observability/: README.md  __init__.py  events.py  logging.py  runtime.py  snapshots.py
apps/api/symphony/orchestrator/: README.md  __init__.py  core.py  recovery.py
apps/api/symphony/tracker/: README.md  __init__.py  factory.py  interfaces.py  linear.py  linear_client.py  models.py  plane.py  plane_client.py  write_contract.py  write_service.py
apps/api/symphony/workflow/: __init__.py  config.py  loader.py
apps/api/symphony/workspace/: README.md  (+3 more)
apps/web/: angular.json  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json
apps/web/src/: index.html  main.ts
apps/web/tests/: runtime-presenters.test.ts  runtime-session.service.test.ts
docs/: EXEC_PLAN.md  EXEC_PLAN_BACKEND_PACKAGE_SPLIT.md  EXEC_PLAN_CODEX_SDK_MIGRATION.md  EXEC_PLAN_LINEAR_GRAPHQL_RUNTIME.md  EXEC_PLAN_MIK-47.md  EXEC_PLAN_REMOVE_TRACKER_WRITE_COMPAT.md  ROADMAP.md  SPEC.md  SPEC_GAPS.md  development.md
docs/ADR/: README.md
docs/archive/: EXEC_PLAN_SPEC_GAPS_CONFORMANCE_2026-03-10.md
examples/: WORKFLOW.dev.md
scripts/dev/: api-server.sh  runtime.sh  start.sh  web-server.sh
(+51 files in other folders)
