[project]
name = "symphony"
version = "0.1.0"
description = "Coding-agent orchestration service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.2,<5.3",
  "djangorestframework>=3.15,<3.16",
  "drf-spectacular>=0.28,<0.29",
]

[dependency-groups]
dev = [
  "django-stubs>=5.1,<5.2",
  "mypy>=1.15,<1.16",
  "pre-commit>=4.2,<4.3",
  "pytest>=8.3,<8.4",
  "pytest-django>=4.11,<4.12",
  "ruff>=0.11,<0.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = ["apps/api"]

[tool.django-stubs]
django_settings_module = "config.settings.test"
