[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony"
version = "0.1.0"
description = "Coding-agent orchestration service"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Symphony" }]
dependencies = [
  "codex-app-server-sdk==0.3.2",
  "django>=5.2,<5.3",
  "djangorestframework>=3.15,<3.16",
  "drf-spectacular>=0.28,<0.29",
  "jinja2>=3.1,<3.2",
  "pyyaml>=6.0,<6.1",
]

[project.scripts]
symphony-orchestrator = "symphony.cli:run_orchestrator_main"

[dependency-groups]
dev = [
  "django-stubs>=5.1,<5.2",
  "mypy>=1.15,<1.16",
  "pre-commit>=4.2,<4.3",
  "pytest>=8.3,<8.4",
  "pytest-django>=4.11,<4.12",
  "ruff>=0.11,<0.12",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = { "" = "apps/api" }

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["config*", "symphony*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = ["apps/api"]

[tool.django-stubs]
django_settings_module = "config.settings.test"
